fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-075-fb8db22bb9.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  WebkitTextStroke="2px #00F"
  boxSize="100%"
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
  paintOrder="stroke fill"
>
  Stroke
</Text>"
