fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-077-a65991a745.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  as="ul"
  boxSize="100%"
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
  my="0px"
  pl="1.5em"
>
  <li>
    Item 1
  </li>
</Text>"
