fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-078-d6b1085274.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  as="ol"
  boxSize="100%"
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
  my="0px"
  pl="1.5em"
>
  <li>
    Item 1
  </li>
</Text>"
