fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-080-f6233dd6a0.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---

"<Text
  boxSize="100%"
  color="#F00"
  fontFamily="Arial"
  fontSize="16px"
  fontWeight="400"
  letterSpacing="0px"
  lineHeight="1.5px"
>
  HelloWorld
</Text>"
