fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-081-ed3fa48802.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" transform="rotate(-45deg)" w="100px" />"
