fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-082-db0d8839e8.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="40px" transform="rotate(30deg)" w="80px" />"
