fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-083-1820110e8a.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="60px" transform="rotate(-15.5deg)" w="120px" />"
