fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-084-3d01c94f87.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" opacity="0.5" w="100px" />"
