fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-085-1f274ec7a6.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" mixBlendMode="darken" w="100px" />"
