fixtures/devup-figma-plugin/snapshots/codegen/upstream-codegen-086-a44a580f30.snap
---
source: crates/devup-mcp-devup-ui/tests/compat_fixtures.rs
expression: actual
---
"<Box h="50px" mixBlendMode="multiply" w="100px" />"
